--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3946,7 +3946,7 @@ ol {
 
 @media only screen and (min-width: 1200px) {
     .container {
-        max-width: 1170px;
+        max-width: 75%;
     }
 }
 
