--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1182,7 +1182,9 @@ ol {
 
 .product-item .pi-pic img {
     min-width: 100%;
-    max-height: 700px;
+    max-height: 750px;
+    display: block;
+
 }
 
 .product-item .pi-pic .sale {
@@ -4447,3 +4449,31 @@ ol {
     background-color: #3ad8ff;
     color: #fff;
   }
+  body {
+    min-height: 100vh;
+    background: #fafafa;
+}
+
+
+.social-link {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #666;
+    border-radius: 50%;
+    transition: all 0.3s;
+    font-size: 0.9rem;
+}
+
+.social-link:hover, .social-link:focus {
+    background: #ddd;
+    text-decoration: none;
+    color: #555;
+}
+
+.progress {
+    height: 10px;
+}
