--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1183,9 +1183,10 @@ ol {
 
 .product-item .pi-pic img {
     min-width: 100%;
-    max-height: 750px;
+    max-width: 100%;
     display: block;
-
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .product-item .pi-pic .sale {
